--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "concurrently": "^9.0.1",
-    "react-input-mask": "^2.0.4"
-  },
-  "devDependencies": {
-    "@types/react-input-mask": "^3.0.5"
+    "concurrently": "^9.0.1"
   }
 }
