--- a/ui/package.json
+++ b/ui/package.json
@@ -48,13 +48,14 @@
     "remark-rehype": "^11.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "react-input-mask": "^2.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-query": "^1.2.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8.4.47",
