--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-empty-object-type": "warn"
+    "@typescript-eslint/no-empty-object-type": "warn",
+    "react/no-unescaped-entities": "warn"
   }
 }
