--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "phishing-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -18,8 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:gen": "npx drizzle-kit generate",
-    "db:up": "npx drizzle-kit migrate"
+    "db": "npm run db:mig && npm run db:up && npm run db:gen",
+    "db:mig": "drizzle-kit generate",
+    "db:up": "drizzle-kit migrate",
+    "db:gen": "DATABASE_URL=postgres://postgres:postgres@localhost:5555/phish_aware kysely-codegen --out-file ./db/schema.d.ts && prettier --write ./db/schema.d.ts"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
@@ -29,6 +31,7 @@
     "@nestjs/platform-ws": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/websockets": "^10.4.4",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.26.1",
     "drizzle-orm": "^0.35.0",
     "fastify": "^5.0.0",
@@ -52,6 +55,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "kysely-codegen": "^0.16.8",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
