--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "strict": true,
+    "types": ["./db/schema"],
     "esModuleInterop": true,
     "incremental": true,
     "skipLibCheck": true,
@@ -18,6 +19,11 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "src/*": ["./src/*"],
+      "test/*": ["./test/*"],
+      "db/*": ["./db/*"]
+    }
   }
 }
