--- a/ui/package.json
+++ b/ui/package.json
@@ -33,12 +33,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
+    "input-otp": "^1.2.4",
+    "ky": "^1.7.2",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-image-crop": "^11.0.7",
+    "react-input-mask": "^2.0.4",
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "rehype": "^13.0.2",
@@ -48,14 +51,13 @@
     "remark-rehype": "^11.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "react-input-mask": "^2.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react-input-mask": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8.4.47",
