update package and lock json

--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "concurrently": "^9.0.1",
-    "nodemailer": "^6.9.15"
+    "concurrently": "^9.0.1"
   },
-  "devDependencies": {
-    "@types/nodemailer": "^6.4.16"
-  }
+  "devDependencies": {}
 }
