--- a/api/.env.template
+++ b/api/.env.template
@@ -3,6 +3,8 @@ MAIL_PORT=${MAIL_PORT}
 MAIL_USER="${MAIL_USER}"
 MAIL_PASSWORD="${MAIL_PASSWORD}"
 
+API_PORT=${API_PORT}
+
 DB_HOSTNAME="${DB_HOSTNAME}"
 DB_PORT=${DB_PORT}
 DB_SCHEMA="${DB_SCHEMA}"
