pass drizzle config to env variables

--- a/api/.env.template
+++ b/api/.env.template
@@ -10,3 +10,5 @@ DB_PORT=${DB_PORT}
 DB_SCHEMA="${DB_SCHEMA}"
 DB_USERNAME="${DB_USERNAME}"
 DB_PASSWORD="${DB_PASSWORD}"
+
+DATABASE_URL="${DATABASE_URL}"
