--- a/api/package.json
+++ b/api/package.json
@@ -31,24 +31,26 @@
     "@nestjs/platform-ws": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/websockets": "^10.4.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.26.1",
     "drizzle-orm": "^0.35.0",
     "fastify": "^5.0.0",
     "kysely": "^0.27.4",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "nodemailer": "^6.9.15",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "@types/nodemailer": "^6.4.16",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
